# anima_lora

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.ja.md  README.ko.md  README.md  README.zh.md  inference.py  install.ps1  install.sh  package-lock.json  plan.md  pyproject.toml  tasks.py  test_came_equiv.py  train.py
.github/workflows/: release.yml
_archive/repa/: repa.py
_archive/soft_tokens_contrastive/: soft_token_idea.md
anima_lora/: __init__.py
archive/: bench_methods.py  toread.md
archive/proposals/: apex-0506.md  apex-0508.md  directedit_editing.md  directedit_editing_v2.md  directedit_gaps.md  hf_residual_adapter.md
archive/text_enc_probes/: edit_nearest_tag.py  edit_slot_alignment.py
bench/: _anima.py
bench/apex/: README.md  probe_temporal_shift.py  probe_temporal_train.py
bench/channel_stats/: README.md  analyze_lora_input_channels.py  channel_dominance_analysis.md
bench/dcw/: covariance_ceiling.py  k_supervision_sweep.py  sweep_buckets.py
bench/distill_mod/: synth_config_bench.py
bench/easycontrol/: step0_equivalence.py  step1p5_lse_equivalence.py  two_stream_smoke.py
bench/fera/: expressivity_analysis.py
bench/fm_vr_headroom/: README.md  proposal.md  run_bench.py
bench/hydralora/: progress0421.md
bench/ip_adapter/: pair_audit.md  pair_audit.py
bench/lycoris/: README.md  forward_equivalence.py
bench/postfix_inversion_bridge/: run_bench.py
bench/postfix_ortho/: run_bench.py
bench/qk_rope_fusion/: probe_inductor_fusion.py
bench/qkv_packed/: probe_packed_qkv.py
bench/router_targets/: README.md  analyze_router_target_leverage.py
bench/selfflow/: README.md  probe.py
bench/smc_cfg/: analysis_and_proposal.md  compare_cfg.py  measure_error_magnitude.py
bench/soft_tokens_contrastive/: negative_audit.py  repr_dispersive_probe.py
bench/soft_tokens_dispersive/: probe.py
bench/spd/: README.md  compose_report.md  measure_autoregression.py  measure_latent_spectrum.py  per_artist_spectrum.py  plan.md  probe_compose.py  probe_lowres_denoise.py  probe_onpolicy_handoff.py  probe_teacher_lowres.py
bench/spectrum_pareto/: README.md  capture_features.py  compare_samplers.py  proposal.md  replay_forecaster.py
bench/static_padding/: README.md  bench_attn_speed.py  bench_compile_mem.py  probe_pad_leak.py
bench/timestep_sampling/: README.md  probe_sigma_signal.py  report.md
bench/vr_grad_diagnostics/: README.md  run_bench.py
configs/: base.toml  presets.toml  sam_mask.yaml
configs/datasets/: easycontrol.toml  ip_adapter.toml
configs/gui-methods/: chimera_hydra.toml  easycontrol.toml  fera.toml  hydralora_experimental.toml  hydralora_fei.toml  hydralora_sigma.toml  ip_adapter.toml  locon.toml  loha.toml  lokr.toml  lora-8gb.toml  lora.toml  lora_longer.toml  lora_repa.toml  ortholora.toml  postfix_ortho_cond.toml  reft.toml  soft_tokens.toml  tlora.toml  tlora_ortho.toml  tlora_ortho_reft.toml
configs/methods/: apex.toml  apex_combined.toml  chimera.toml  easycontrol.toml  fera.toml  ip_adapter.toml  locon.toml  loha.toml  lokr.toml  lora.toml  postfix.toml  soft_tokens.toml  spd.toml  turbo.toml
custom_nodes/comfyui-anima-blockcompile/: README.md  __init__.py  nodes.py  pyproject.toml
custom_nodes/comfyui-anima-directedit/: __init__.py  nodes.py  pyproject.toml
custom_nodes/comfyui-anima-tagger/: __init__.py  nodes.py  pyproject.toml
custom_nodes/comfyui-anima-trainer/: README.md  dataset_prep.py  node_defaults.toml  nodes.py  pyproject.toml  training.py
custom_nodes/comfyui-anima-trainer/_vendor/: __init__.py
custom_nodes/comfyui-anima-trainer/_vendor/scripts/daemon/: client.py  config.py  proc.py
custom_nodes/comfyui-hydralora/: CLAUDE.md  README.md  __init__.py  adapter.py  chimera.py  fera.py  grid.py  nodes.py  postfix.py  pyproject.toml  soft_tokens.py  xy_inputs.py  xyplot.py
custom_nodes/comfyui-hydralora/js/: xyplot_widgets.js
docs/: README.md  multi_model_support.md
docs/contributions/: fork-contributions.md
docs/experimental/: apex.md  chimera-hydra.md  easycontrol.md  fera.md  ip-adapter.md  postfix.md  soft_tokens.md  spd.md  vr_loss.md
docs/findings/: asymflow_parameterization.md  (+4 more)
examples/: 01_generate.py  02_generate_with_lora.py  03_config_and_network.py  04_train_lora.py  05_load_models.py  06_vae_and_dataset.py  07_frozen_dit_training_build.py  README.md
gui/: __init__.py  app.py  config_tab.py  daemon.py  explanations.py  gui_settings.json  i18n.py  preprocess_tab.py  progress.py  system_dialog.py
networks/: CLAUDE.md  __init__.py  attention_dispatch.py  attn_fuse.py  lora_save.py  lora_utils.py  spd.py  spectrum.py
preprocess/: cache_latents.py  cache_pe_encoder.py  cache_pooled_text.py  cache_text_embeddings.py  generate_masks.py  resize_images.py
scripts/: distill_modulation.py  distill_spd.py  distill_turbo.py  edit.py  export_logs_json.py  merge_to_dit.py  profile_ncu.sh  profile_nsys.sh  sync_vendor.py  update.py
tests/: test_bucket_distribution.py  test_caption_index.py  test_caption_shuffle.py  test_chimera_node_loader.py  test_chimera_router_stats.py  test_daemon.py  test_directedit_v_injection.py  test_dreambooth_cache_paths.py  test_edit_dispatcher.py  test_ensure_text_strategies.py  test_factory_lycoris_load.py  test_factory_metadata_flow.py  test_fera_fecl_handler.py  test_generation_request.py  test_global_router.py  test_gui_jsonl_progress.py  test_gui_variants.py  test_huber_schedule.py  test_identity_pairs.py  test_inference_hydra_sigma.py  test_lora_custom_autograd.py  test_loss_registry.py  test_lycoris_adapter.py  test_mask_self_containment.py  test_method_network_lifecycle.py  test_native_flatten.py  test_nested_paths.py  test_network_cfg.py  test_network_registry.py  test_per_channel_scaling_roundtrip.py  test_preprocess_dataset.py  test_preprocess_tree.py  test_progress_sink.py  test_read_caption.py  test_router_compute.py  test_runtime_harness_cli.py  test_scan_source_dir.py  test_smoke.py  test_soft_tokens_contrastive.py  test_soft_tokens_node_loader.py  (+9 more)
workflow/: __main__.py  app.py  config.py  logger.py  models.py  scheduler.py
(+263 files in other folders)
