[project]
name = "comfyui-hydralora"
description = "Anima loader nodes for ComfyUI. AnimaAdapterLoader auto-detects LoRA, HydraLoRA multi-head with live σ-conditional and FeRA-style FEI-conditional routing, and LoReFT residual-stream edits. AnimaFeraLoader handles author-faithful FeRA (Yin et al., arXiv:2511.17979) — global router on the latent's spectral energy with independent stacked experts per Linear. AnimaPostfixLoader handles prefix/postfix/cond context splicing. Three single-purpose nodes; chain via the MODEL socket."
version = "3.1.0"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/sorryhyun/anima_lora/tree/main/custom_nodes/comfyui-hydralora"

[tool.comfy]
PublisherId = "sorryhyun"
DisplayName = "Anima Adapter Loader"
Icon = ""
